--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cardo&family=Montserrat:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 /*----------Body----------*/
 
 body {
@@ -55,6 +55,21 @@ p {
 .hero {
     width: 100%;
     height: 610px;
+}
+
+/*----------About----------*/
+
+.signature {
+    font-family: "Great Vibes", sans-serif;
+    font-size: xx-large;
+}
+
+/*----------Menu Image----------*/
+
+.menu-img {
+    height: 500px;
+    margin: auto;
+    display: block;
 }
 
 /*----------Footer----------*/
