--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cardo&family=Montserrat:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
 /*----------Body----------*/
 
 body {
@@ -34,23 +35,64 @@ section {
 }
 
 /*----------Navbar----------*/
-
 .navbar {
-    background-color: #00a4b4;
+    height: 60px;
     width: 100%;
+    background-color: #00a4b4;
+    top: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
+}    
+
+.dropdown {
+    display: none;
 }
 
-.navbar ul li a {
-    color: #ffffff !important;
-    font-family: "Montserrat", sans-serif;
+.dropbtn {
+    background-color: #00a4b4;
+    color: white;
+    padding: 10px;
     text-transform: uppercase;
-    text-align: center;
+    border: white;
+    cursor: pointer;
+    position: relative;
+    padding-top: 20px;
 }
 
-.navbar a:hover {
-    text-decoration: underline;
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #ffffff;
+    color: #00a4b4
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #00a4b4;
+    min-width: 100px;
+    overflow: auto;
+    z-index: 10;
+}
+
+.dropdown-content a {
+    color: #ffffff;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+}
+
+.dropdown a:hover {
+    background-color: #ffffff;
+    color: #00a4b4;
+}
+
+.show {
+    display: block;
 }
 
 /*----------Content Container----------*/
@@ -87,20 +129,39 @@ section {
 
 /*----------Gallery----------*/
 
-.val-list {
-    font-family: "Cardo", sans-serif;
-    text-align: center;
-    list-style: none;
+.gallery-pics {
+    max-width: 350px;
+    max-height: 350px;
+    padding-left: 430px;
+    padding-top: 60px;
+} 
+
+.prev {
+    color: #00a4b4; 
+    padding-left: 500px;
 }
 
-.val-head {
-    text-decoration: underline;
+.next {
+    color: #00a4b4;
+    padding-left: 180px;
 }
 
-.carousel {
-    height: 500px;
-    width: 400px;
-    margin: auto;
+.prev:hover {
+    cursor: pointer;
+}
+
+.arrow-text {
+    font-family: "Montserrat" , sans-serif;
+    color: #00a4b4;
+    padding-left: 475px;
+}
+
+.next-arrow {
+    padding-left: 130px;
+}
+
+.next:hover {
+    cursor: pointer;
 }
 
 /*----------Map----------*/
